force-app/main/default/objects/OpportunityLineItem/fields/FRM_Custo_total__c.field-meta.xml
<CustomField>
    <fullName>FRM_Custo_total__c</fullName>
    <formula>PricebookEntry.FRM_Custo__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custo total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>