force-app/main/default/objects/OpportunityLineItem/fields/FRM_Receita_Total__c.field-meta.xml
<CustomField>
    <fullName>FRM_Receita_Total__c</fullName>
    <formula>(ListPrice * Quantity)-FRM_Custo_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receita Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>