force-app/main/default/objects/OpportunityLineItem/fields/Product_img__c.field-meta.xml
<CustomField>
    <fullName>Product_img__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; Product2.Product_Image_id__c, &quot;&quot;, 98, 115)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem</label>
    <type>Text</type>
</CustomField>